syntax = "proto3";

package page;

option go_package = "github.com/unknowntpo/playground-2022/go/grpc/page";

message Page {
    string title = 1;
    string content = 2;
}

message PageKey {
    string key = 1;
}

service PageService {
    rpc GetHead(GetHeadRequest) returns (stream PageKey) {}
    rpc GetPage(stream PageKey) returns (stream Page) {}
    rpc SetPage(stream Page) returns (PageKey) {}
}

message GetHeadRequest {
    string list_key = 1;
    int64 user_id = 2;
}